--- a/main.html
+++ b/main.html
@@ -2,7 +2,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- view in adroid -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- ten va noi dung -->
+    <meta name="hihihih" content="html,css">
+    <!-- ten tac gia -->
+    <meta name="author" content="ten tac gia">
     <title>Document</title>
     <link rel="stylesheet" href="./main.scss">
 </head>
@@ -25,10 +30,10 @@
                         <li><a href="./tdv/non.html">Hat</a></li>
                     </ul>
                 </li>
-                <li><a href="./weapon.html">Giá lun tốt</a>
+                <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Giá lun tốt</a>
 
                 </li>
-                <li><a href="./Constellations.html">Mới</a>
+                <li><a href="">Mới</a>
 
                 </li>
                 <li><a href="./talent.html">áo thun</a>
@@ -37,8 +42,37 @@
                 <li><a href="./combo.html">Combos</a>
 
                 </li>
-                <li><a href="./material.html"><i class="fa-solid fa-magnifying-glass"></i></a>
-
+                <li><a href="./material.html">></a>
+                    <table class="tablecontent">
+                        <tr>
+                            <th>ao1</th>
+                            <th>ao2</th>
+                            <th>ao3</th>
+                            <th>ao4</th>
+                            <th>ao5</th>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>2</td>
+                            <td>3</td>
+                            <td>4</td>
+                            <td>5</td>
+                            <td>6</td>
+                        </tr>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>8</td>
+                            <td>9</td>
+                            <td>10</td>
+                            <td>11</td>
+                            <td>12</td>
+                        </tr>
+                        <tr></tr>
+                        <tr></tr>
+                        <tr></tr>
+                        <tr></tr>
+                    </table>
                 </li>
                 <li><a href="./team/team.html">Teams</a>
 
@@ -46,16 +80,15 @@
             </ul>
         </nav>
     </div>
-    <div class="buttonthanhcuon">
-        <button> hihihih</button>
-    </div>
-    <div class="img1"><img
-            src="https://cmsv2.yame.vn/uploads/7dad42d0-fc61-425c-8491-ce8c2120b606/BST_Seventy_Seven.jpg?quality=80&w=0&h=0"
-            alt=""></div>
+
 </header>
 
 <body>
 
 </body>
+<footer>
+
+    </div>
+</footer>
 
 </html>
