--- a/main.html
+++ b/main.html
@@ -9,7 +9,8 @@
     <!-- ten tac gia -->
     <meta name="author" content="ten tac gia">
     <title>Document</title>
-    <link rel="stylesheet" href="./main.scss">
+    <link rel="stylesheet" href="./mainmenu.scss">
+    <link rel="stylesheet" href="./bodymain.css">
 </head>
 <header>
     <div class="menu">
@@ -43,36 +44,8 @@
 
                 </li>
                 <li><a href="./material.html">></a>
-                    <table class="tablecontent">
-                        <tr>
-                            <th>ao1</th>
-                            <th>ao2</th>
-                            <th>ao3</th>
-                            <th>ao4</th>
-                            <th>ao5</th>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>2</td>
-                            <td>3</td>
-                            <td>4</td>
-                            <td>5</td>
-                            <td>6</td>
-                        </tr>
-                        </tr>
-                        <tr>
-                            <td>7</td>
-                            <td>8</td>
-                            <td>9</td>
-                            <td>10</td>
-                            <td>11</td>
-                            <td>12</td>
-                        </tr>
-                        <tr></tr>
-                        <tr></tr>
-                        <tr></tr>
-                        <tr></tr>
-                    </table>
+
+
                 </li>
                 <li><a href="./team/team.html">Teams</a>
 
@@ -81,9 +54,85 @@
         </nav>
     </div>
 
+
 </header>
 
 <body>
+    <div class="dropmenu">
+        <div class="smalldivmenu">
+            <a href="">ao polo</a>
+            <ul>
+                <li><a href="">Áo polo trơn</a></li>
+                <li><a href="">Áo polo có hình in</a></li>
+                <li><a href="">Áo Polo Phối Màu & Raglan</a></li>
+                <li><a href="">Áo Polo dáng rộng</a></li>
+                <li><a href="">Áo Polo dáng vừa</a></li>
+            </ul>
+        </div>
+        <div class="smalldivmenu">
+            <a href="">Áo Sơ Mi</a>
+            <ul>
+                <li><a href="">Áo sơ mi tay dài</a></li>
+                <li><a href="">Áo sơ mi tay ngắn</a></li>
+
+            </ul>
+        </div>
+        <div class="smalldivmenu">
+            <a href="">Áo Khoác</a>
+            <ul>
+                <li><a href="">Áo khoác dáng rộng</a></li>
+                <li><a href="">Áo khoác dáng vừa</a></li>
+                <li><a href="">Áo khoác Denim (Jean, Kaki)</a></li>
+                <li><a href="">Áo Gió trượt nước, mỏng nhẹ</a></li>
+                <li><a href="">Áo khoác Thun, Thể Thao</a></li>
+                <li><a href="">Áo khoác trơn</a></li>
+                <li><a href="">Áo khoác phối màu</a></li>
+                <li><a href="">Áo Khoác chống nắng có mũ</a></li>
+                <li><a href="">Áo khoác chống nắng không mũ</a></li>
+            </ul>
+        </div>
+        <div class="smalldivmenu">
+            <a href="">Quần dài (Tây, Jean, Thun)</a>
+            <ul>
+                <li><a href="">Quần Tây</a></li>
+                <li><a href="">Quần Jean lưng gài</a></li>
+                <li><a href="">Quần Jean lưng thun</a></li>
+                <li><a href="">Quần dài Kaki, Dù, Denim</a></li>
+                <li><a href="">Quần dài Thun</a></li>
+            </ul>
+        </div>
+        <div class="smalldivmenu">
+            <a href="">Quần Short</a>
+            <ul>
+                <li><a href="">Quần Short Jean mềm</a></li>
+                <li><a href="">Quần Short thun mát</a></li>
+                <li><a href="">Quần Short thể thao nhanh khô</a></li>
+
+            </ul>
+        </div>
+        <div class="smalldivmenu">
+            <a href="">Phụ kiện thời trang</a>
+            <ul>
+                <li><a href="">Quần Lót</a></li>
+                <li><a href="">Dây Nịt Da, Dây Thắt Lưng Da</a></li>
+                <li><a href="">Ví Da, Ví Passport</a></li>
+                <li><a href="">Nón</a></li>
+                <li><a href="">Tất - Vớ</a></li>
+                <li><a href="">Khăn</a></li>
+                <li><a href="">Găng Tay</a></li>
+                <li><a href="">Super Sale Thứ 4</a></li>
+            </ul>
+        </div>
+        <div class="smalldivmenu">
+            <a href="">bkslfs</a>
+            <ul>
+                <li><a href="">akdvakvd</a></li>
+                <li><a href="">adas</a></li>
+                <li><a href="">sada</a></li>
+                <li><a href="">ads</a></li>
+            </ul>
+        </div>
+    </div>
 
 </body>
 <footer>
