--- a/main.html
+++ b/main.html
@@ -133,11 +133,10 @@
             </ul>
         </div>
     </div>
-
-</body>
-<footer>
+    <div class="footerEnd">
 
     </div>
-</footer>
+</body>
+
 
 </html>
