--- a/testAI.html
+++ b/testAI.html
@@ -2,68 +2,246 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- view in adroid -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
+    <link rel="stylesheet" href="./menubs.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+
 </head>
 
-<body>
-    <div class="listimg">
-        <img src="https://cmsv2.yame.vn/uploads/0b2d8617-5870-44cb-a864-565a41b16113/BST_No_Style.jpg?quality=80&w=0&h=0"
-            alt="Image 1">
-        <img src="https://cmsv2.yame.vn/uploads/91b6b81d-83e6-4d22-befb-47a6ee2b58a0/BST_Non_Branded.jpg?quality=80&w=0&h=0"
-            alt="Image 2">
-        <img src="https://cmsv2.yame.vn/uploads/91b6b81d-83e6-4d22-befb-47a6ee2b58a0/BST_Non_Branded.jpg?quality=80&w=0&h=0"
-            alt="Image 3">
+<header>
+    <div class="navbar bg-black navbar-expand-md">
+        <a href="" class="navbar-brand text-white">
+            <img src="//res.yame.vn/Content/images/yame-f-logo-white.png?v=20249" alt="">
+        </a>
+        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navCt">
+            <span class="navbar-toggler-icon bg-white"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navCt">
+            <ul class="navbar-nav">
+                <!-- Other nav items -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link text-white active dropdown-toggle" data-bs-toggle="dropdown" href="#">
+                        <i class="fa-solid fa-bars"></i>
+                    </a>
+                    <div class="dropdown-menu bg-black">
+                        <div class="row row-cols-1 row-cols-md-4">
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="box">
+                                    <div class="bigct">
+                                        <a href="">Áo polo</a>
+                                    </div>
+                                    <div class="smallct">
+                                        <a href="">Áo polo trơn</a>
+                                    </div>
+                                    <!-- More items -->
+                                </div>
+                            </div>
+
+                            <!-- More columns -->
+                        </div>
+                    </div>
+                </li>
+                <!-- Other nav items -->
+            </ul>
+        </div>
     </div>
+</header>
 
-    <button id="prev">Previous</button>
-    <button id="next">Next</button>
 
-    <style>
-        .listimg {
-            display: flex;
-            overflow: hidden;
-            width: 100%;
-            max-width: 600px;
-            /* Adjust to fit your layout */
-        }
 
-        .listimg img {
-            flex-shrink: 0;
-            width: 100%;
-            transition: transform 0.3s ease;
-        }
-    </style>
 
-    <script>
-        const listImage = document.querySelector('.listimg');
-        const imgs = Array.from(document.querySelectorAll('.listimg img'));
-        let current = 0;
-        const totalImages = imgs.length;
 
-        function scrollImages(direction) {
-            const containerWidth = listImage.offsetWidth;
 
-            if (direction === 'next') {
-                if (current === totalImages - 1) {
-                    current = 0;
-                } else {
-                    current++;
-                }
-            } else if (direction === 'prev') {
-                if (current === 0) {
-                    current = totalImages - 1;
-                } else {
-                    current--;
-                }
-            }
+<body>
 
-            listImage.style.transform = `translateX(${-containerWidth * current}px)`;
-        }
-
-        document.getElementById('next').addEventListener('click', () => scrollImages('next'));
-        document.getElementById('prev').addEventListener('click', () => scrollImages('prev'));
-    </script>
 </body>
+
 
 </html>
